Add note about type annotation for functions

--- a/型定義ファイルで関数の定義.md
+++ b/型定義ファイルで関数の定義.md
@@ -46,3 +46,28 @@
 参考サイト
 
 [サバイバルTypeScript - 関数の型の宣言 (function type declaration)](https://typescriptbook.jp/reference/functions/function-type-declaration)
+
+---
+
+### 関数型を型アノテーションで使う際の注意
+
+-　関数型の型アノテーションを使った宣言時は引数は省略可能
+
+- もちろん関数の実行時は引数は必要
+
+    ```ts
+    //index.d.ts
+    declare type func1 = (val: string) => string;
+    ```
+
+    ```ts
+    //main.ts
+
+    //★func1型を型アノテーションとして使う場合、引数は省略できる
+    const myFunc: func1 = () => {
+        return "Hello"
+    }
+
+    //★しかし、実行する際はもちろん引数なしだとエラー
+    console.log(func1("World"));
+    ```
